// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditSize /> should match to snapshot when render default 1`] = `
<div
  className="EditSize space-6x"
>
  <p
    className="EditSize__header space-1x"
  >
    <strong>
      Web widget size
    </strong>
  </p>
  <span
    className="EditSize-description space-4x"
  >
    The size is preserved when the widget is switched off and on.
  </span>
  <div
    className="EditSize__content"
  >
    <label
      className="InputSet__label"
      htmlFor="width-input"
    >
      <span
        className="InputSet__label-text"
      >
        Width
      </span>
      <input
        className="EditSize__text-input"
        id="width-input"
        onChange={[Function]}
        type="number"
        value={100}
      />
      px
    </label>
    <label
      className="InputSet__label"
      htmlFor="height-input"
    >
      <span
        className="InputSet__label-text"
      >
        Height
      </span>
      <input
        className="EditSize__text-input"
        id="height-input"
        onChange={[Function]}
        type="number"
        value={100}
      />
      px
    </label>
  </div>
</div>
`;

exports[`<EditSize /> should match to snapshot when size is zero 1`] = `
<div
  className="EditSize space-6x"
>
  <p
    className="EditSize__header space-1x"
  >
    <strong>
      Web widget size
    </strong>
  </p>
  <span
    className="EditSize-description space-4x"
  >
    The size is preserved when the widget is switched off and on.
  </span>
  <div
    className="EditSize__content"
  >
    <label
      className="InputSet__label"
      htmlFor="width-input"
    >
      <span
        className="InputSet__label-text"
      >
        Width
      </span>
      <input
        className="EditSize__text-input"
        id="width-input"
        onChange={[Function]}
        type="number"
        value=""
      />
      px
    </label>
    <label
      className="InputSet__label"
      htmlFor="height-input"
    >
      <span
        className="InputSet__label-text"
      >
        Height
      </span>
      <input
        className="EditSize__text-input"
        id="height-input"
        onChange={[Function]}
        type="number"
        value=""
      />
      px
    </label>
  </div>
</div>
`;
